package no.hiof.G07;

public @interface KeyPressed {
}
